<resources>
    <string name="app_name">Sales Assistant</string>
    <!-- login -->
    <string name="user_name">User Name</string>
    <string name="pass">Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_empty_name">This user name is empty</string>
    <string name="error_invalid_user_name">Not allow to use special char or space on user name</string>

    <string name="error_empty_password">This password is empty</string>
    <!--<string name="error_invalid_password">This password is not valid </string>-->
    <string name="error_short_password">Password is too short</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_home">Home</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <!-- Sign_up -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Mobile">Mobile</string>
    <string name="job_title">Job Title </string>
    <string name="email_adrress">Email Address</string>
    <string name="action_sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="error_confirm_pass">Password and confirm password must be the same</string>
    <string name="error_invalid_password">Password must contain at least 1 uppercase letter, 1 lower case letter,1 number</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <!-- AddLead -->
    <string name="lead_name">Lead name</string>
    <string name="product">Product Chosen</string>
    <string name="comment">Any comments</string>
    <string name="date">Press here to select lead added date</string>
    <string name="edit_lead">Edit lead name</string>
    <string name="btn_add_lead">Add</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>


    <string name="error_interest_product">Please choose interest product</string>
    <string name="error_date">Please choose added date </string>




</resources>
