<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lead_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lead_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_choosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lead_name"
            android:text="@string/product"
            android:layout_margin="4dp"
            android:textSize="17sp"
            android:textStyle="italic" />



        <TextView
            android:id="@+id/show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3/1/2018"
            android:layout_marginLeft="4dp"
            android:textStyle="italic"
            android:layout_below="@+id/product_choosen"/>

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="70dp"
            android:text="@string/edit_btn"
            android:textColor="#f16f7d"
            android:textSize="17sp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:paddingLeft="5dp"
            android:textColor="#f16f7d"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="70dp"
            />
        <TextView
            android:id="@+id/delete_lead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#f16f7d"/>

    </RelativeLayout>
</LinearLayout>