<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddLead"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFF3F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/lead_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Lead Name"
                android:inputType="text"
                android:layout_marginBottom="@dimen/large_margin"/>

            <Spinner
                android:id="@+id/interest"
                android:layout_below="@id/lead_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/products">
            </Spinner>

            <TextView
                android:id="@+id/choose_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginBottom="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:textStyle="bold|italic"
                android:layout_below="@+id/interest"
                android:textSize="@dimen/activity_vertical_margin"/>

            <EditText
                android:id="@+id/any_comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/comment"
                android:inputType="text"
                android:gravity="start"
                android:layout_below="@+id/choose_date"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/btn_add"
                android:layout_below="@+id/any_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/btn_add_lead"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#f16f7d"
                android:background="@drawable/login_button"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>